updates to section 2

--- a/region-of-interest.tex
+++ b/region-of-interest.tex
@@ -10,17 +10,13 @@
 
 Seismic activity in the Iranian plateau is dominated by the tectonic contacts between the Arabian, Eurasian, and Indian plates, which confine the region laterally between the Indian and Eurasian plates, and the Arabian and eastern Asia-Minor plates to the east and west, respectively. This setting gives rise to the Zagros, Alborz, and east Iranian mountain ranges, and defines the geology of the region. Based on these conditions, Iranian seismicity is typically divided into various seismic zones, varying from as few as four to as many as twenty-three \citep[e.g.,][]{Stocklin1968, Berberian1976, Tavakoli1999}. Here, we adopt the model proposed by \citet{Karimiparidari2013}, which consists of six seismic zones: Azerbaijan, Alborz, Kopeh-Dagh, Zagros, Central-East, and Makram (Fig.~\ref{fig:iran}).
 
-Within this context, we define our region of interest between longitudes 43.5\textdegree{}E and 61.5\textdegree{}E, and latitudes 34\textdegree{}N and 40\textdegree{}N, as shown in Fig.~\ref{fig:iran}. These limits correspond to the effective region of interest for which we will present results ins subsequent sections. Our calculations, however, included data from a slightly larger region with a 0.5\textdegree{}-perimeter as indicated in the figure. This is done to avoid the artificial decay effect that results from smoothing the seismicity along and near the edges of the region of interest. The effective region has an area of 1,703 km $\times$ 667 km, and as shown in Fig.~\ref{fig:iran}, it encloses the northern part of Iran with the complete seismic zones of Azerbaijan, Alborz, and Kopeh-Dagh, and portions of the Zagros and Central-East seismic zones.
+Within this context, we define our region of interest between longitudes 43.5\textdegree{}E and 61.5\textdegree{}E, and latitudes 34\textdegree{}N and 40\textdegree{}N, as shown in Fig.~\ref{fig:iran}. These limits correspond to the effective region of interest for which we will present results ins subsequent sections. Our calculations, however, included data from a slightly larger region with a 0.5\textdegree{}-perimeter as indicated in the figure. This is done to avoid the artificial decay effect that results from smoothing the seismicity along and near the edges of the region of interest. The effective region has an area of 1,703 km $\times$ 667 km, and as shown in Fig.~\ref{fig:iran}, it encloses the northern part of Iran with most of the Azerbaijan seismic zone, the complete zones of Alborz and Kopeh-Dagh, and the northernmost portions of the Zagros and Central-East seismic zones.
 
-At the northeast of Iran, the seismic zone of Azerbaijan is strongly controlled by the effects of the north Tabriz fault (NTF) system. This system is a complex northwest-trending structure with right-lateral, strike-slip faulting mechanisms \citep{Berberian1999}. The NTF has ruptured in multiple occasions in the last few centuries of which there are historical accounts.  
+At the northeast of Iran, the seismic zone of Azerbaijan is strongly controlled by the north Tabriz fault (NTF) system. This system is a complex northwest-trending structure with a predominant right-lateral, str\-ike-slip faulting mechanism \citep{Berberian1999}. Historical accounts document the occurrence of earthquakes in this area as far back as to the 9th century, with events in the years 858 ($M$ 6.0), 1042 ($M$ 7.3), 1273 ($M$ 6.5), and 1304 ($M$ 6.7) \citep{Berberian1999}. In the 18th century, in particular, the NTF ruptured three times in a span period of 65 years, which included the $M$ 7.3 1721 Shelbi earthquake in the southeastern section, the $M$ 7.4 1780 Tabriz earthquake in the northwestern section, and the $M$ 6.3 1786 Marand-Mishu on the Mishu reverse fault and the Sufian segment of the NTF. According to \citet{Jones1834}, the Shelbi and Tabriz earthquakes had surface ruptures of more than 35 and 42 km, respectively; and the latter presented vertical separations of about 2 to 4 m. Other notable events include the $M$ 5.5 1807 Tasuj and the $M$ 6.7 1879 South Bozqush earthquakes. More recently, the NTF system produced the $M_w$ 6.1 1997 Ardabil and $M_w$ 6.4 2012 Tabriz earthquakes, which caused extensive damage to the region and took the lives of more than 1500 people \citep{USGS_ardabil,USGS_tabriz}.
 
+Transitioning from the Azerbaijan to the Alborz seismic zone, the next fault system runs along the Rocks of the Talesh mountains, to the northwest of the Alborz Mountains. Faults in this area have ruptured recently, including an $M_s$ 6.0 low-angle thrust earthquake in 1978 \citep{Berberian1999} and the $M_w$ 7.4 1990 Manjil-Rudbar earthquake, which caused numerous deaths and significant damage to the region in the south Caspian depression \citep{USGS_manjil}. At the central area of the Alborz seismic zone, near Tehran, the region is characterized by active reverse faults in the North Tehran Thrust (NTT) system. These faults are parallel to the northwest-trending structural gain of the Alborz Mountains belt, and include the south-dipping partially blind faults of Davudieh, Shian, and Bagh-E Feyz. According to \citet{Ambraseys2005}, both Tehran and the ancient city of Rey have been devastated in multiple occasions due to severe earthquakes in this area. Historical accounts document the occurrence of multiple $M>7$ earthquakes in 743, 958, 1177, 1655, and 1830. The 1830 earthquake, in particular, ruptured the central segments of the NTT, adjacent to the Mosha fault.
 
-
-% There were three earthquakes from 1721-86 that ruptured the North Tabriz Fault system from southeast to northwest. The Tabriz region is in the Araxes structural block of northwestern Iran, southwest of the continuation of the western Alborz Mountains towards the Caucasus. The North Tabriz Fault (NTF) is a complex northwest-trending structure, which contains evidence observed on aerial photographs, and vertical displacement with the north side up, of right-lateral strike-slip displacement \citep{Berberian1999}.
-
-% The NTF system and nearby reverse faults ruptured from southeast to northwest in three earthquakes over 65 years: the Shebli earthquake with magnitude 7.3 in 1721 on the southeastern NTF with a surface rupture more than 35 km long, reported by \citet{Jones1834} the Tabriz earthquake with magnitude 7.4 in 1780 on the northwestern NTF, with a surface rupture more than 42 km long and vertical separation of 2 to 4 $m$; and the Marand-Mishu earthquake with magnitude of 6.3 in 1786 on the Mishu reverse fault and the Sufian segment of the NTF. Another earthquake with  magnitude 5.5 struck the Tasuj reverse fault farther west in 1807 and an earthquake of M 6.7 took place along the South Bozqush reverse fault farther southeast in 1879. Prior to the 1721-86 earthquake sequence, Tabriz was shaken by earthquakes in 858 (M 6.0), 1042 (M 7.3), 1273 (M ~ 6.5), and 1304 (M 6.7)\citep{Berberian1999}. Most recently, earthquakes with $M_w$ 6.1 in 1997 and $M_w$ 6.4 in 2012 occurred in Ardabil and Tabriz, respectively. These earthquakes caused around 1500 casualties and extensive damage \citep{USGS_ardabil,USGS_tabriz}.\\
-
-
+To the east, the Kopeh-Dagh fault system is the predominant faulting system in the seismic zone of the same name. This system consists of several partly overlapping segments parallel to a NW--SE oriented structure of step-overs characterized by short south-dipping thrust faults striking E--W \citep{Berberian2001}, which exhibits active tectonic displacements along more than 500 km \citep{Trifonov1978}. This system is responsible for the $M_s$ 7.2 earthquake that stroke Ashgabat, the capital city of Turkmenistan and destroyed more than 30 villages in Iran in 1948. Historically, the Kopeh-Dagh seismic zone is also responsible for multiple earthquakes at boundary between the Neyshabur and Binalud reverse faults between 1209 and 1405 \citep{Berberian1999}, and an estimated $M_s$ 7.1 earthquake in 10 B.C., roughly 30 kilometers from the border of Iran \citep{Berberian2001}.
 
 % *********************************************************************************************************************
 % *********************************************************************************************************************
