--- a/seismicity.tex
+++ b/seismicity.tex
@@ -1,7 +1,9 @@
 
 \section{Seismic Catalog}
 
-Uniform earthquake catalog is the most important factor in seismic hazard analysis of a region.  Different studies have been conducted in order to prepare a uniform catalog for Iranian Earthquake. Historical event interpretation and different magnitude conversion relationships are some of the factors which make all these catalogs different. Among different sources \citet{Ambraseys2005}, \citet{Berberian1994}, and \citet{moinfar1994} are some of the main sources for Iranian earthquake catalog. These catalogs contain historical and instrumental earthquakes that have been reported in literature and national and international networks. According to \citet{Ambraseys2005}, there are some scattered indication of earthquake effects  back to third millinuim BC. However, adequate documentary coverage of individual events begins from seventh century A.D. \citet{Mirzaei1997} provided a comprehensive list of studies that have been done in compilation a uniform catalog for Iranian earthquakes in order to prepare a uniform catalog of earthquake (all earthquakes are converted to surface wave magnitude Ms) for seismic hazard assessment in Iran. The catalog is covering the period of 4th century B.C. through 1994. The instrumental data is achievable from three national agencies including IIEES, International Institute of Earthquake Engineering and Seismology; IRSC, The Iranian seismological center, University of Tehran; and BHRC, Building and Housing Research Center (Iran Strong Motion Network) (For more information about these networks see \citet{Karimiparidari2013}).
+A fundamental step in regional seismic hazard analysis is the compilation of a robust seismic catalog including reliable information about both historically documented and instrumentally registered earthquakes. Notable previous efforts to compose uniform earthquake catalogs for Iran include but are not limited to \citet{moinfar1994}, \citet{Berberian1994}, and \citet{Ambraseys2005}. These studies, however, often differ from each other in their use of magnitude scales or magnitude conversion rules and the extent to which they accept historical accounts as reliable data. According to \citet{Ambraseys2005}, for instance, there is scattered evidence of earthquakes as far back as the third millennium B.C. \citet{Mirzaei1997}, on the other hand, provides a comprehensive list of studies and collects earthquake information uniformly converted to surface wave magnitude, $M_s$, that date back to the 4th century B.C., and through 1994. While historical seismicity may be arguable, instrumental data is more easily available through agencies such as the International Institute of Earthquake Engineering and Seismology (IIEES); the Iranian Seismological Center (IRSC), at the University of Tehran; and the Building and Housing Research Center (BHRC), who operates Iran's Strong Motion Network see \citep[see additional details in][]{Karimiparidari2013}.
+
+
 
 % *********************************************************************************************************************
 % *********************************************************************************************************************
@@ -12,7 +14,10 @@ Uniform earthquake catalog is the most important factor in seismic hazard analys
 % \subsection{Historical  and Instrumental Seismicity}
 
 % Uniform earthquake catalog is the most important factor in seismic hazard analysis of a region.  Different studies have been conducted in order to prepare a uniform catalog for Iranian Earthquake. Historical event interpretation and different magnitude conversion relationships are some of the factors which make all these catalogs different. Among different sources \citet{Ambraseys2005}, \citet{Berberian1994}, and \citet{moinfar1994} are some of the main sources for Iranian earthquake catalog. These catalogs contain historical and instrumental earthquakes that have been reported in literature and national and international networks. According to \citet{Ambraseys2005}, there are some scattered indication of earthquake effects  back to third millinuim BC. However, adequate documentary coverage of individual events begins from seventh century A.D. \citet{Mirzaei1997} provided a comprehensive list of studies that have been done in compilation a uniform catalog for Iranian earthquakes in order to prepare a uniform catalog of earthquake (all earthquakes are converted to surface wave magnitude Ms) for seismic hazard assessment in Iran. The catalog is covering the period of 4th century B.C. through 1994. The instrumental data is achievable from three national agencies including IIEES, International Institute of Earthquake Engineering and Seismology; IRSC, The Iranian seismological center, University of Tehran; and BHRC, Building and Housing Research Center (Iran Strong Motion Network) (For more information about these networks see \citet{Karimiparidari2013}).
+
+
 % Many most of attenuation relationship use  moment magnitude $M_w$ as an input for the equation \citep{Douglas2011}. Moment magnitude is not suffering from saturation and has physical meaning \citep{Kanamori1977}. Due to mentioned reasons Mw has become a most appropriate magnitude scale in recent studies. 
+
 %  \citet{Karimiparidari2013}compiled a uniform earthquake catalog for Iran and adjacent areas, using international and national databanks until April 2010.  They developed relationships between moment magnitude and other magnitude based on orthogonal regression.  They removed the dependent events (aftershocks and foreshocks) using the procedure by \citet{Gardner1974}. The catalog of events with magnitude equal and above Mw 5.5 is provided. 
 % \citet{Shahvar2013} presented a unified and homogeneous catalog for the Iranian plateau $(M_w >= 4)$, created by merging data from two local catalogs and seven international agencies for 1900-2011 period. They used orthogonal regression method \citep{Castellaro2006} to derive magnitude conversion relation. By removing foreshocks and aftershocks according to the procedure detailed in Uhrhammer(1986), they also provided declustered version of the catalog.
 
