--- a/region-of-interest.tex
+++ b/region-of-interest.tex
@@ -1,9 +1,16 @@
 
-\begin{figure*}[!ht] 
+\begin{figure*}[ht!] 
 	\centering
 	\includegraphics[width=0.9\textwidth]{figures/pdf/figure-01}
 	\caption{Region of interest and Iranian seismic zones. At the top, the map of Iran and surrounding countries with shaded relief in the background and the Iranian seismic zones \citep[after][]{Karimiparidari2013} and region of interest in the foreground. The dashed box indicates the complete region of interest and the thicker line box indicates the effective area for which seismic hazard is estimated. The effective region of interest is shown in greater detail at the bottom. Details include the location of the major urban centers and seismic faults in northern Iran.}
 	\label{fig:iran}
+\end{figure*}
+
+\begin{figure*}[ht!] 
+	\centering
+	\includegraphics[width=0.9\textwidth]{figures/pdf/figure-02}
+	\caption{Notable earthquakes in the region of interest and within three major seismic zones in northern Iran. Epicentral locations are indicated with stars. The labels next to each star or linked with a line to avoid congestion show the magnitude and year of the earthquake.}
+	\label{fig:selected}
 \end{figure*}
 
 \section{Region of Interest}
@@ -12,11 +19,13 @@ Seismic activity in the Iranian plateau is dominated by the tectonic contacts be
 
 Within this context, we define our region of interest between longitudes 43.5\textdegree{}E and 61.5\textdegree{}E, and latitudes 34\textdegree{}N and 40\textdegree{}N, as shown in Fig.~\ref{fig:iran}. These limits correspond to the effective region of interest for which we will present results in subsequent sections. Our calculations, however, included data from a slightly larger region with a 0.5\textdegree{}-perimeter as indicated in the figure. This is done to avoid the artificial decay effect that results from smoothing the seismicity along and near the edges of the region of interest. The effective region has an area of 1,703 km $\times$ 667 km, and as shown in Fig.~\ref{fig:iran}, it encloses the northern part of Iran with most of the Azerbaijan seismic zone, the complete zones of Alborz and Kopeh-Dagh, and the northernmost portions of the Zagros and Central-East seismic zones.
 
-At the northeast of Iran, the seismic zone of Azerbaijan is strongly controlled by the north Tabriz fault (NTF) system. This system is a complex northwest-trending structure with a predominant right-lateral, str\-ike-slip faulting mechanism \citep{Berberian1999}. Historical accounts document the occurrence of earthquakes in this area as far back as to the 9th century, with events in the years 858 ($M$ 6.0), 1042 ($M$ 7.3), 1273 ($M$ 6.5), and 1304 ($M$ 6.7) \citep{Berberian1999}. In the 18th century, in particular, the NTF ruptured three times in a span period of 65 years, which included the $M$ 7.3 1721 Shebli earthquake in the southeastern section, the $M$ 7.4 1780 Tabriz earthquake in the northwestern section, and the $M$ 6.3 1786 Marand-Mishu on the Mishu reverse fault and the Sufian segment of the NTF. According to \citet{Jones1834}, the Shebli and Tabriz earthquakes had surface ruptures of more than 35 and 42 km, respectively; and the latter presented vertical separations of about 2 to 4 m. Other notable events include the $M$ 5.5 1807 Tasuj and the $M$ 6.7 1879 South Bozqush earthquakes. More recently, the NTF system produced the $M_w$ 6.1 1997 Ardabil and $M_w$ 6.4 2012 Tabriz earthquakes, which caused extensive damage to the region and took the lives of more than 1500 people \citep{USGS_ardabil,USGS_tabriz}.
+At the northeast of Iran, the seismic zone of Azerbaijan is strongly controlled by the North Tabriz Fault (NTF) system. This system is a complex northwest-trending structure with a predominant right-lateral, str\-ike-slip faulting mechanism \citep{Berberian1999}. Historical accounts document the occurrence of earthquakes in this area as far back as to the 9th century, with events in the years 858 ($M$ 6.0), 1042 ($M$ 7.3), and 1304 ($M$ 6.7) \citep{Berberian1999}. In the 18th century, in particular, the NTF ruptured three times in a span period of 65 years, which included the $M$ 7.7 1721 Tabriz earthquake in the southeastern section, the $M$ 7.6 1780 Tabriz earthquake in the northwestern section, and the $M$ 6.3 1786 Marand-Mishu on the Mishu reverse fault and the Sufian segment of the NTF. According to \citet{Jones1834}, the Shebli and Tabriz earthquakes had surface ruptures of more than 35 and 42 km, respectively; and the latter presented vertical separations of about 2 to 4 m. Other notable events include the $M$ 5.5 1807 Tasuj and the $M$ 6.7 1879 South Bozqush earthquakes. More recently, the same region was stroke by the $M_w$ 6.1 1997 Ardabil and $M_w$ 6.4 2012 Tabriz earthquakes, which caused extensive damage and took the lives of more than 1500 people \citep{USGS_ardabil, USGS_tabriz}.
 
-Transitioning from the Azerbaijan to the Alborz seismic zone, the next fault system runs along the Rocks of the Talesh mountains, to the northwest of the Alborz Mountains. Faults in this area have ruptured recently, including an $M_s$ 6.0 low-angle thrust earthquake in 1978 \citep{Berberian1999} and the $M_w$ 7.4 1990 Manjil-Rudbar earthquake, which caused numerous deaths and significant damage to the region in the south Caspian depression \citep{USGS_manjil}. At the central area of the Alborz seismic zone, near Tehran, the region is characterized by active reverse faults in the North Tehran Thrust (NTT) system. These faults are parallel to the northwest-trending structural gain of the Alborz Mountains belt, and include the south-dipping partially blind faults of Davudieh, Shian, and Bagh-E Feyz. According to \citet{Ambraseys2005}, Tehran---or the ancient city of Rey---has been devastated in multiple occasions due to severe earthquakes in this area. Historical accounts document the occurrence of multiple $M>7$ earthquakes in 743, 958, 1177, 1665, and 1830. The 1830 earthquake, in particular, ruptured the central segments of the NTT, adjacent to the Mosha fault.
+Transitioning from the Azerbaijan to the Alborz seismic zone, the next fault system runs along the Rocks of the Talesh mountains, to the northwest of the Alborz Mountains. Faults in this area have ruptured recently \citep{Berberian1999}.
+% , including an $M_s$ 6.0 low-angle thrust earthquake in 1978 \citep{Berberian1999} and 
+The $M_w$ 7.4 1990 Manjil-Rudbar earthquake, for instance, caused numerous deaths and significant damage to the region in the south Caspian depression \citep{USGS_manjil}. At the central area of the Alborz seismic zone, near Tehran, the region is characterized by active reverse faults in the North Tehran Thrust (NTT) system. These faults are parallel to the northwest-trending structural gain of the Alborz Mountains belt, and include the south-dipping partially blind faults of Davudieh, Shian, and Bagh-E Feyz. According to \citet{Ambraseys2005}, Tehran---or the ancient city of Rey---has been devastated in multiple occasions due to severe earthquakes in this area. Historical accounts document the occurrence of multiple $M>7$ earthquakes in 743, 958, 1177, 1665, and 1830. The 1830 earthquake, in particular, ruptured the central segments of the NTT, adjacent to the Mosha fault.
 
-To the east, the Kopeh-Dagh fault system is the predominant faulting system in the seismic zone of the same name. This system consists of several partly overlapping segments parallel to a NW--SE oriented structure of step-overs characterized by short south-dipping thrust faults striking E--W \citep{Berberian2001}, which exhibits active tectonic displacements along more than 500 km \citep{Trifonov1978}. This system is responsible for the $M_s$ 7.2 earthquake that stroke Ashgabat, the capital city of Turkmenistan and destroyed more than 30 villages in Iran in 1948. Historically, the Kopeh-Dagh seismic zone is also responsible for multiple earthquakes at boundary between the Neyshabur and Binalud reverse faults between 1209 and 1405 \citep{Berberian1999}, and an estimated $M_s$ 7.1 earthquake in 10 A.D., roughly 30 kilometers from the border of Iran \citep{Berberian2001}.
+To the east, the Kopeh-Dagh fault system is the predominant faulting system in the seismic zone of the same name. This system consists of several partly overlapping segments parallel to a NW--SE oriented structure of step-overs characterized by short south-dipping thrust faults striking E--W \citep{Berberian2001}, which exhibits active tectonic displacements along more than 500 km \citep{Trifonov1978}. This system is responsible for the $M_w$ 7.3 earthquake that stroke Ashgabat, the capital city of Turkmenistan and destroyed more than 30 villages in Iran in 1948. Historically, the Kopeh-Dagh seismic zone is also responsible for multiple earthquakes at the boundary between the Neyshabur and Binalud reverse faults between 1209 and 1405 \citep{Berberian1999}, and an estimated $M_s$ 7.1 earthquake in 10 A.D., roughly 30 kilometers from the border of Iran \citep{Berberian2001}. These and other notable earthquakes in the seismic zones of Azerbaijan and Alborz are shown in Fig.~\ref{fig:selected}.
 
 % *********************************************************************************************************************
 % *********************************************************************************************************************
