cleaning up studd no longer needed

--- a/seismicity.tex
+++ b/seismicity.tex
@@ -8,7 +8,7 @@
 
 \section{Seismic Catalog}
 
-A fundamental step in regional seismic hazard analysis is the compilation of a robust seismic catalog including reliable information about both historically documented and instrumentally registered earthquakes. Notable previous efforts to compose uniform earthquake catalogs for Iran include but are not limited to \citet{moinfar1994}, \citet{Berberian1994}, and \citet{Ambraseys2005}. These studies, however, often differ from each other in their use of magnitude scales or magnitude conversion rules and the extent to which they accept historical accounts as reliable data. According to \citet{Ambraseys2005}, for instance, there is scattered evidence of earthquakes as far back as the third millennium B.C. \citet{Mirzaei1997}, on the other hand, provides a comprehensive list of studies and collects earthquake information uniformly converted to surface wave magnitude, $M_s$, that date back to the 4th century B.C., and through 1994. While historical seismicity may be arguable, instrumental data is more easily available through agencies such as the International Institute of Earthquake Engineering and Seismology (IIEES); the Iranian Seismological Center (IRSC), at the University of Tehran; and the Building and Housing Research Center (BHRC), who operates Iran's Strong Motion Network see \citep[see additional details in][]{Karimiparidari2013}.
+A fundamental step in regional seismic hazard analysis is the compilation of a robust seismic catalog including reliable information about both historically documented and instrumentally recorded earthquakes. Notable previous efforts to compose uniform earthquake catalogs for Iran include but are not limited to \citet{moinfar1994}, \citet{Berberian1994}, and \citet{Ambraseys2005}. These studies, however, differ from each other in their use of magnitude scales or magnitude conversion rules and the extent to which they accept historical accounts as reliable data. According to \citet{Ambraseys2005}, for instance, there is evidence of earthquakes as far back as the third millennium B.C. \citet{Mirzaei1997}, on the other hand, provides a comprehensive list of studies and collects earthquake information uniformly converted to surface wave magnitude, $M_s$, that date back to the 4th century B.C., and through 1994. While historical seismicity may be arguable, instrumental data is more easily accessible through agencies such as the International Institute of Earthquake Engineering and Seismology (IIEES); the Iranian Seismological Center (IRSC), at the University of Tehran; and the Building and Housing Research Center (BHRC), who operates Iran's Strong Motion Network see \citep[see additional details in][]{Karimiparidari2013}.
 
 
 
