updates and finished seismic catalog section

--- a/region-of-interest.tex
+++ b/region-of-interest.tex
@@ -1,12 +1,12 @@
 
-\begin{figure*}[ht!] 
+\begin{figure*}[t] 
 	\centering
 	\includegraphics[width=0.9\textwidth]{figures/pdf/figure-01}
 	\caption{Region of interest and Iranian seismic zones. At the top, the map of Iran and surrounding countries with shaded relief in the background and the Iranian seismic zones \citep[after][]{Karimiparidari2013} and region of interest in the foreground. The dashed box indicates the complete region of interest and the thicker line box indicates the effective area for which seismic hazard is estimated. The effective region of interest is shown in greater detail at the bottom. Details include the location of the major urban centers and seismic faults in northern Iran.}
 	\label{fig:iran}
 \end{figure*}
 
-\begin{figure*}[ht!] 
+\begin{figure*}[t] 
 	\centering
 	\includegraphics[width=0.9\textwidth]{figures/pdf/figure-02}
 	\caption{Notable earthquakes in the region of interest and within three major seismic zones in northern Iran. Epicentral locations are indicated with stars. The labels next to each star or linked with a line to avoid congestion show the magnitude and year of the earthquake.}
