--- a/seismic-catalog.tex
+++ b/seismic-catalog.tex
@@ -1,9 +1,9 @@
 
-\begin{figure*}[ht!] 
+\begin{figure*}[t] 
 	\centering
 	\includegraphics[width=0.9\textwidth]{figures/pdf/figure-03}
-	\caption{Seismic catalog. (a) Historical seismicity prior to 1900. (b) Instrumental seismicity. Size of symbols is proportional to the magnitude of the events. In the case of the historical seismicity catalog, the color fill indicates the year of the event.}
-	\label{fig:selected}
+	\caption{Location of events considered in the compiled seismic catalog. (a) Historical seismicity prior to 1900 for $M_w \geq 4$ \citep[after][]{Zare2014}. (b) Instrumental seismicity up until December 2015 for $M_w \geq 3$ (IIEES) and $M_w \geq 4$ \citep[after][]{Zare2014}. Size of symbols is proportional to the magnitude of the events. In the case of the historical seismicity catalog, the color fill indicates the year of the event. The borderlines of the seismic zones shown in Fig.~\ref{fig:regional} are shown in the background in white, along with the light gray shaded relief.}
+	\label{fig:catalog}
 \end{figure*}
 
 \section{Seismic Catalog}
@@ -14,26 +14,13 @@ Most ground motion prediction equations used today for seismic hazard assessment
 
 In turn, the catalog by \citet{Zare2014} uses both historical data prior to 1900 and instrumental data up until 2006, and includes events from Afghanistan-Pakis\-tan, Saudi Arabia, the Caucasus, and parts of Turkey in addition to the Alborz-Azerbaijan, Zagros, Central Iran, Kopeh-Dagh and Makran seismic zones. All events in this catalog are converted to $M_w$ using relationships from previous studies \textcolor{red}{(e.g., pending ref.)}; and data were declustered using various methods including \citet{Gardner1974}, \citet{Reasenberg1985}, \textcolor{red}{Uhrhammer (1986), and Gruenthal (????) [is this level of detail really necessary?]}. In addition, \citet{Zare2014} provided the catalog completeness for different magnitude ranges using the cumulative frequency-magnitude distribution of \citet{Gutenberg1944} and \citet{richter1958}, and the frequency magnitude distribution obtained using ZMAP \citep{Wiemer2001}, and found the methods to yield consistent results. This catalog is particularly relevant because it is published as part of the current effort by the Global Earthquake Model (GEM) partnership and the Earthquake Model of the Middle East (EMME) project.
 
-In this study we consider earthquakes with $M_w \geq 3$...
+In this study we adopt the catalog compiled by \citet{Zare2014} for both historical and instrumental earthquakes. This catalog includes events of magnitude $M_w \geq 4$ from 550 A.d.~to December 1999. We complemented it with events $M \geq 3$ occurred between January 2000 and December 2015 obtained from the IIEES database. Our analysis of this dataset indicated that the catalog satisfies completeness from 2005 onward. While we recognize that earthquakes in the range $3 \leq M_w \leq 4$ are unlikely to cause structural damage, we include them as a means to feed the model with information about epicentral locations with potential for future larger magnitude earthquakes. 
+% The result of our compilation is shown in Fig.~\ref{fig:catalog}, which includes maps for historical and instrumental seismicity. 
+% The following sections provide additional details about magnitude conversion and de\-clustering of the events in our combined catalog.
 
- % Earthquakes with magnitude 3 are not considered as a structural threat, however, the epicenter of earthquakes with magnitude $M_w 3$ are a  susceptible location for future bigger earthquakes.  According to our preliminary data processing based on IIEES data, Iranian catalog for earthquake with magnitude greater and equal 3, is complete from 2005. In order to make sure about the completeness of the catalog, we use IIEES data from 2000. We used the EMME project data provided by \citet{Zare2014} up to 2000. Fig.~\ref{fig:historical} represents the historical data (pre 1900) in the study region. 
+The portion of the catalog obtained from IIEES for $M \geq 3$ earthquakes between 2000 and 2015 contained event reports that use different magnitude scales. We converted all events with magnitudes in $M_L$, $M_s$, and $mb$ scales to $M_w$ using the same conversion relationships used by \citet{Zare2014}, which allowed us to preserve compatibility with the historical and instrumental seismicity catalog adopted from the same work of \citet{Zare2014}. In addition, the dataset from IIEES also contained events reported with duration magnitude ($M_D$), as reported by the International Seismological Centre (ISC). In these cases we used the empirical relationship developed by \citet{Deniz2010} to convert $M_D$ to $M_w$. Although this relationship was derived based on a dataset for $M_w>=4.5$ events, we extrapolate the equation for lower magnitude and found that results to adjust well with the general trend, which should provide for good estimates of the $a$-value in the Gutenberg-Richter equation.
 
-
-% In this study we consider earthquakes with Mw equal and greater than 3. Earthquakes with magnitude 3 are not considered as a structural threat, however, the epicenter of earthquakes with magnitude $M_w 3$ are a  susceptible location for future bigger earthquakes.  According to our preliminary data processing based on IIEES data, Iranian catalog for earthquake with magnitude greater and equal 3, is complete from 2005. In order to make sure about the completeness of the catalog, we use IIEES data from 2000. We used the EMME project data provided by \citet{Zare2014} up to 2000. Fig.~\ref{fig:historical} represents the historical data (pre 1900) in the study region. 
-
-% \subsubsection{Magnitude Conversion}
-
-% The catalog of recorded earthquake from 2000-2015 which is downloaded from IIEES is reported the earthquake based on different magnitude scale. We converted the $M_L$, $M_s$, and $mb$ magnitudes through conversion relationships which is defined in \citet{Zare2014}. There also some of data which is recorded in $M_D$ (Duration magnitude). These data are reported by International Seismological Centre (ISC).  \citet{Deniz2010}, developed a set of empirical equations to convert earthquake magnitudes in $mb$, $M_D$, $M_L$ and $M_s$ scales to the $M_w$ scales using orthogonal regression procedure. They used data of earthquake that occurred in Turkey from different data centers including ISC. In this study we use the conversion equation of \citet{Deniz2010} to convert the Md to Mw. Although they defined the equation based on $M_w>=4.5$, we extrapolate the equation for lower magnitude. We believe having those earthquakes, even with small error  in magnitude is important for estimating an accurate "a" value  in Gutenberge-Richter equation.
-
-
-
-% \subsubsection{Declustering}
-
-% It is generally assumed that the seismicity of each tectonic seismic source follows a Poissonian occurrence process. Therefore, in order to accomplish this, we declustered the earthquake catalog. In compiling the catalog of events, foreshocks and aftershocks were removed using a declustering methodology \citep{Gardner1974}. For north Iran (lon: 42-62.5, lat: 33-41), from 7478 earthquake event we removed 605 Foreshocks and 2917 aftershocks.
-% Whole data that we used for seismicity parameters of Zagros and Central Iran tectonic seismic regions are not included in these numbers. Fig.~\ref{fig:instrumental} shows the epicenter of declustered instrumental  earthquakes.
-
-
-
+Last but not least important, we declustered the catalog prior to using it in the assessment of seismic hazard for the region of interest. This entailed the removal of foreshocks and aftershocks from the catalog to adjust the dataset to include only those events in agreement with a Poissonian model, which is a well-accepted model for seismic sources. Out of the original 7,478 earthquakes in the assembled catalog for the seismic regions of Azerbaijan, Alborz and Kopeh-Dagh, we removed 605 foreshocks and 2,917 aftershocks. The resulting final set of events in the catalog compiled for this study is shown in Fig.~\ref{fig:catalog}, which includes maps for both historical and instrumental seismicity.
 
 % *********************************************************************************************************************
 % *********************************************************************************************************************
